# app

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  CONTRIBUTING.md  CONTRIBUTORS.txt  LICENSE  README.md  SECURITY.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  host-setup-prompt.md  justfile  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .django.example  .postgres  .postgres.example
.envs/.production/: .django.example  .frontend.example  .postgres.example
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/local/frontend/: Dockerfile
compose/production/django/: Dockerfile
compose/production/frontend/: Dockerfile
compose/production/traefik/: Dockerfile  entrypoint.sh  traefik.yml  traefik.yml.template
config/: api.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: ANALYSIS_PIPELINE.md  ANALYZER_GUIDE.md  ARCHITECTURE.md  BACKGROUND_SERVICES.md  GENERATION_PROCESS.md  MODELS_REFERENCE.md  QUICKSTART.md  README.md  TEMPLATE_SPECIFICATION.md  TODO.md  TROUBLESHOOTING.md  api-reference.md  conf.py  deployment-guide.md  development-guide.md  howto.rst  index.rst  make.bat  users.rst
docs/architecture/: app-layout.md
frontend/: DESIGN_SYSTEM.md  package-lock.json  package.json  svelte-check-full-output.txt  svelte-check-output.txt  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html  hooks.client.ts  hooks.server.ts
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
frontend/static/: sw.js
llm_lab/: conftest.py
llm_lab/analysis/: admin.py  apps.py  models.py
llm_lab/analysis/api/: schema.py  views.py
llm_lab/analysis/migrations/: 0001_initial.py  0002_add_query_indexes.py  0003_analysisresult_add_cancelled_status.py
llm_lab/analysis/services/: ai_analyzers.py  analysis_service.py  base.py  cancellation.py  dynamic_analyzers.py  executor_service.py  live_target.py  performance_analyzers.py  result_service.py  static_analyzers.py
llm_lab/analysis/tests/: conftest.py  factories.py  test_analysis_service.py  test_analyzers.py  test_api.py  test_dynamic_analyzers.py  test_legacy_tools.py  test_live_target.py  test_models.py  test_performance_analyzers.py
llm_lab/automation/: admin.py  apps.py  models.py  services.py  tasks.py
llm_lab/automation/api/: schema.py  views.py
llm_lab/automation/engine/: __init__.py  batches.py  dispatchers.py  params.py  runner.py  scheduler.py
llm_lab/automation/migrations/: 0001_initial.py
llm_lab/automation/tests/: factories.py  test_api.py  test_engine.py  test_services.py
llm_lab/common/: crypto.py  exceptions.py  pagination.py  security.py  threading.py  views.py
llm_lab/credentials/: admin.py  apps.py  models.py
llm_lab/credentials/api/: schema.py  views.py
llm_lab/credentials/migrations/: 0001_initial.py  0002_alter_userapicredential_provider.py
llm_lab/credentials/services/: resolver.py  validator.py
llm_lab/credentials/tests/: test_api.py  test_crypto.py  test_error_mapping.py  test_resolver.py
llm_lab/docs/: apps.py  services.py
llm_lab/docs/api/: views.py
llm_lab/docs/tests/: test_docs.py
llm_lab/export/: apps.py  services.py
llm_lab/export/api/: views.py
llm_lab/export/services/: __init__.py  findings.py  jobs.py  reports.py  tasks.py
llm_lab/export/tests/: test_export.py
llm_lab/generation/: admin.py  apps.py  models.py  tasks.py
llm_lab/generation/api/: schema.py  views.py
llm_lab/generation/migrations/: 0001_initial.py
llm_lab/generation/services/: __init__.py  backend_scanner.py  code_parser.py  dispatcher.py  generation_service.py  openrouter_client.py  orchestrator.py  prompt_renderer.py  result_writer.py
llm_lab/generation/tests/: factories.py  test_backend_scanner.py  test_code_parser.py  test_generation_service.py
llm_lab/llm_models/: __init__.py  admin.py  apps.py  models.py  services.py
llm_lab/llm_models/api/: schema.py  views.py
llm_lab/llm_models/migrations/: 0001_initial.py
llm_lab/llm_models/services/: __init__.py  helpers.py  imports.py  sync.py
llm_lab/llm_models/tests/: factories.py  test_api.py  test_models.py  test_sync.py
llm_lab/rankings/: admin.py  apps.py  models.py  services.py
llm_lab/rankings/api/: schema.py  views.py
llm_lab/rankings/fixtures/: benchmarks.json
llm_lab/rankings/migrations/: 0001_initial.py
llm_lab/rankings/services/: __init__.py  aggregator.py  constants.py  scoring.py  writer.py
llm_lab/rankings/tests/: test_api.py  test_services.py
llm_lab/realtime/: apps.py  events.py  subscribers.py
llm_lab/realtime/api/: views.py
llm_lab/realtime/tests/: test_events.py
llm_lab/reports/: admin.py  apps.py  models.py
llm_lab/reports/api/: schema.py  views.py
llm_lab/reports/migrations/: 0001_initial.py  0002_reconcile_schema.py
llm_lab/reports/services/: __init__.py  generators.py  loc.py  report_service.py
llm_lab/reports/tests/: test_api.py  test_services.py
llm_lab/runtime/: admin.py  apps.py  models.py  proxy.py
llm_lab/runtime/api/: schema.py  views.py
llm_lab/runtime/migrations/: 0001_initial.py  0002_containerinstance_subdomain.py
llm_lab/runtime/services/: container_service.py  docker_manager.py  port_allocator.py  scaffolding.py  status_cache.py
llm_lab/runtime/tests/: factories.py  test_api.py  test_proxy.py  (+3 more)
llm_lab/statistics/: apps.py  services.py
llm_lab/system/: apps.py  services.py
llm_lab/templates/: base.html
llm_lab/tokens/: admin.py  apps.py  auth.py  models.py  services.py
llm_lab/users/: adapters.py  apps.py  models.py  views.py
scripts/: bootstrap.sh  merge_production_dotenvs.py  test_merge_production_dotenvs.py
(+292 files in other folders)
